# gigi

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  BUILDING.txt  FlattenRenderGraph.cpp  FlattenRenderGraph.h  Format_Code.bat  GigiAssert.cpp  GigiAssert.h  GigiCompiler.aps  GigiCompiler.rc  GigiCompiler.vcxproj  GigiCompiler.vcxproj.filters  HowToMakeAPublicRelease.md  Install.nsi  LICENSE.txt  MakeCode_UnitTests_DX12.bat  MakeCode_UnitTests_DX12.py  MakeCode_UnitTests_SupportMD.bat  MakeCode_UnitTests_SupportMD.py  MakeCode_UnitTests_UE_5_3.bat  MakeCode_UnitTests_UE_5_3.py  MakeCode_UnitTests_WebGPU.bat  MakeCode_UnitTests_WebGPU.py  NOTICE.txt  README.md  RunViewerTests.bat  Version.h  browserservers.txt  gigi.sln  gigihelp.html  gigischema.json  index.html  main.cpp  resource.h
GigiBrowser/: Browser.cpp  (+14 more)
GigiCompilerLib/Backends/DX12/templates/Application/: .gitignore  CMakeLists.txt  main.cpp
GigiCompilerLib/Backends/DX12/templates/Application/WinPixEventRuntime.1.0.240308001/: WinPixEventRuntime.nuspec  [Content_Types].xml
GigiCompilerLib/Backends/DX12/templates/Application/imgui/: imgui_tables.cpp
_GeneratedCode/UnitTests/DX12/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  MakeSolution.bat  UnitTestLogic.h  UnitTests.sln  UnitTests.vcxproj  UnitTests.vcxproj.filters  main.cpp  readme.txt
_GeneratedCode/UnitTests/DX12/DX12Utils/: Camera.cpp  CompileShaders.h  CompileShaders_dxc.cpp  CompileShaders_fxc.cpp  FileCache.h  HeapAllocationTracker.h  ParseCSV.h  ReadbackHelper.h  SRGB.h  ShaderCompilerCommon.h  TextureCache.h  dxutils.cpp  dxutils.h  logfn.h  shadercompiler_fxc.cpp
_GeneratedCode/UnitTests/DX12/DXC/lib/x64/: dxcompiler.lib
_GeneratedCode/UnitTests/DX12/UnitTests/Barrier/BarrierTest/: readme.txt
_GeneratedCode/UnitTests/DX12/UnitTests/Buffers/MultipleUVMesh/: readme.txt
_GeneratedCode/UnitTests/DX12/UnitTests/Buffers/StructuredBuffer/: readme.txt
_GeneratedCode/UnitTests/DX12/UnitTests/Buffers/bufferViewDescriptorTable/: readme.txt
_GeneratedCode/UnitTests/DX12/UnitTests/Buffers/buffertest/: readme.txt
_GeneratedCode/UnitTests/DX12/UnitTests/Buffers/buffertest_viewOffsetCS/: readme.txt
_GeneratedCode/UnitTests/DX12/UnitTests/Buffers/buffertest_viewOffsetCS_Vars/: readme.txt
_GeneratedCode/UnitTests/DX12/UnitTests/Compute/BufferAtomics/: readme.txt
_GeneratedCode/UnitTests/DX12/UnitTests/Compute/Defines/: readme.txt
_GeneratedCode/UnitTests/DX12/UnitTests/Compute/IndirectDispatch/: readme.txt
_GeneratedCode/UnitTests/DX12/UnitTests/Compute/ReadbackSequence/: readme.txt
_GeneratedCode/UnitTests/DX12/UnitTests/Compute/SlangAutoDiff/: readme.txt
_GeneratedCode/UnitTests/DX12/UnitTests/Compute/VariableAliases/: readme.txt
_GeneratedCode/UnitTests/DX12/UnitTests/Compute/boxblur/: readme.txt
_GeneratedCode/UnitTests/DX12/UnitTests/Compute/simple/: readme.txt
_GeneratedCode/UnitTests/DX12/UnitTests/CopyResource/CopyPartialBuffer/: readme.txt
_GeneratedCode/UnitTests/DX12/UnitTests/CopyResource/CopyResourceTest/: readme.txt
_GeneratedCode/UnitTests/DX12/UnitTests/CopyResource/CopyResourceTest_FB/: readme.txt
_GeneratedCode/UnitTests/DX12/UnitTests/MeshShaders/Mesh/: readme.txt
_GeneratedCode/UnitTests/DX12/WinPixEventRuntime.1.0.230302001/: .signature.p7s
_GeneratedCode/UnitTests/DX12/private/: technique.cpp  technique.h
_GeneratedCode/UnitTests/DX12/public/: imgui.h  pythoninterface.h  technique.h
(+2688 files in other folders)
